<resources>
    <string name="app_name">모바일전시</string>
    <string name="artmain"> "일러스트레이션의 아버지, 아르누보 예술의 선구자인 알폰스 무하" </string>
    <string name="artist"> 작가 프로필\n\n
        이름 : 알폰스 무하 Alphonse Maria Mucha\n
        본명 : Alfons Maria Mucha\n
        출생 - 사망 : 1860. 7. 24. - 1939. 7. 14.\n
        활동분야 : 회화, 장식 미술\n
        사조 : 후기 인상주의\n
        시대 : 현대\n
        출생지 : 체코 이반치체(Ivancice)
    </string>
    <string name="address1">알폰스 무하 출생지 지도 보기</string>
    <string name="youngmain">알폰스 무하의 어린 시절</string>
    <string name="young1">\n무하는 시골 중에 시골에서 태어났습니다.\n
        무하의 어머니는 무하에게 모든 것을 해주고\n
        싶었지만 시골에서는 장난감을 살 수 없었기\n
        때문에 장난감대신 목걸이를 만들어 주셨습니다.\n\n
        여기서 잠깐!\n\n
        아이가 심심한 것과 목걸이를 만들어주는 것은 무슨 관계가 있을까 생각하셨죠?\n\n
        무하의 어머니가 만들어 준 목걸이는 끝에 보석이\n
        달려있는 일반적인 목걸이가 아니라 끝에 연필이\n
        달려있었고 무하는 그걸 항상 착용하고 다니며 연필\n
        목걸이로 어려서부터 그림을 그렸다고 합니다.\n
        어렸을 때부터 그림을 그린 그가 8살 \n
        첫 작품으로 인정받은 작품을 소개합니다.
    </string>
    <string name="art1"> Drawings Pencil, crayon and watercolour on paper c.1868 \n
        37 x 23.5 cm\n\n
    </string>
    <string name="img2hint">사진을 눌러보세요!\n\n</string>
    <string name="pagefourmain">그 후 알폰스 무하의 이야기</string>
    <string name="pagefour"> 무하의 실력은 좋은데 운이 따라주지 않아\n 순탄치 않았었습다.\n
        무하는 오스트리아 빈에서 무대 디자인을 시작했는데\n 그 극장에 불이 나면서\n 일이 없어지게 되었습다.\n
        그래서 귀족들의 초상화를 그리기 시작했는데\n 귀족 중 한명이 무하의 그림 실력을 알아보고\n
        무하를 키워주기로 했습니다.\n 그 귀족의 후원을 받아 프랑스 파리로 가게 되는데\n
        30대가 넘어가도록 큰 성공을 이루지 못하자\n 귀족은 금전적인 지원을 끊어버렸는데요.\n\n
        지원이 끊기자 무하는 인쇄소에서 일을 시작했습니다.\n\n
        무하가 성공할 수 있는 이유는 실력적인 것도 있지만 성실함이 가장 크다고 말할 수 있을 정도로
        인쇄소에서 하루도 안쉬고 일했습니다.\n
        어느 날처럼 무하는 쉬는 날 인쇄소에 있었는데\n 그 날 파리의 유명한 여배우의 포스터를 그리게 됩니다.\n\n
        그 여배우를 소개합니다.
    </string>
    <string name="friend">알폰스 무하 인생에서 빼놓을 수 없는 그녀</string>
    <string name="sarah">
        \n이름 : 사라 베르나르 Sarah Bernhardt \n
        본명 : Rosine Bernard\n
        직업 : 연극 배우\n
        출생 - 사망 : 1844. - 1923.\n
        출생지 : 프랑스 파리
    </string>
    <string name="art2"> Posters Colour lithograph 1894  216 x 74.2 cm Lemercier, Paris </string>
    <string name="img3hint">사진을 눌러보세요!\n\n</string>
    <string name="artist2"> 작가 프로필\n\n
        이름 : 윌리엄 터너 Joseph Mallord William Turner\n
        본명 : Joseph Mallord William Turner\n
        출생 - 사망 : 1775. 4. 23. ~ 1851. 12. 19.\n
        활동분야 : 미술\n
        사조 : 낭만주의\n
        출생지 : 영국 런던
    </string>
    <string name="young2main"> 윌리엄 터너 어린 시절 </string>
    <string name="young2">
         윌리엄 터너는 1775년 이발사의 아들로 태어납니다.
        부모는 아이에게 물려줄 재산은 없었지만 예술성을 물려줬습니다.
        터너는 어린 시절부터 자연과 숲속을 좋아했는데 숲길을 산책하며 눈에 보이는 자연들을
        스케치북에 옮기는 게 취미였다.\n\n
        당시 자식이 화가를 꿈구면 가난하게 살 것이라며
        반대하는 부모가 굉장히 많았지만 터너의 부모님은 자식의 재능을 자랑스럽게 생각하며
        아들의 그림을 자신의 가게에 걸어서 판매하기도 했습니다.
    </string>
    <string name="t_pagefourmain">그 후 윌리엄 터너의 이야기</string>
    <string name="t_pagefour">
        실력을 인정받은 터너는 왕립 아카데미에 정회원으로 들어가게 되는데요.
        당시 왕립 아카데미에 들어간다는 것은 국가에서 그 사람을 인정해주는 뜻이었다고 해요.\n
        그는 이런 능력을 인정받아 아카데미에서 원근법 관련 수업을 하는 교수의 역할을 맡기도 했어요.
        흔히 그림을 그리는 화가는 성공하기 어렵고, 생활고에 시달리지만 윌리엄 터너는 젊은 나이에 성공 가도를 달립니다.
    </string>
    <string name="t_story">
        하지만 그가 원하는 성공은 세상의 기준과는 조금 달랐습니다.\n
        어느 날 자연을 오랜 시간 관찰하던 터너는  깨달아요.\n\n
        그림은 움직이지 않지만, 자연은 계속해서 움직이고 있다는 것을요.\n
        그리고 끊임없이 변하는 자연을 화폭에 담아,\n
        관객이 실제 자연을 보는 것처럼 느끼게 하고 싶다고 생각하게 되며\n
        그의 그림이 크게 변화하게 됩니다. \n\n
        그 작품을 지금 소개합니다.
    </string>
    <string name="t_last">
        주변 사람들은 그를 비난했지만 터너는 흔들리지 않고, 자신이 원하는 방향대로 나아갔어요.
        그 후 그는 자신의 그림을 통해 인상파의 선구자가 되어서 후배들에게 그 길을 열어주었습니다.
        터너는 현재 영국인들이 가장 사랑하는 화가가 되었고,
        2020년도에 영국 20파운드 지폐에 얼굴을 올리게 되었습니다.
    </string>

    <!-- main_register.xml-->
    <string name="register_email">이메일</string>
    <string name="register_pwd">비밀번호</string>

    <!-- main_login.xml-->
    <string name="login">Email 로그인</string>
    <string name="ban">
        - 한 회차에 최대 2시간 관람할 수 있습니다.\n
        - 작품 저작권으로 인해 온라인 전시 캡처,현장 전시 사진촬영과 영상녹화는 절대 불가합니다.\n
        - 음주하신 관람객은 예약하셨더라도 입장이 불가합니다.\n
        - 마스크를 반드시 착용해주세요. 마스크 미착용 시 입장이 불가능합니다.
    </string>
    <string name="ban2">
        ■ 예매자는 본 주의사항의 모든 내용을 숙지 및 동의한 것으로 간주합니다.
    </string>
</resources>